; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_rdma.c_ecore_rdma_info_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_rdma.c_ecore_rdma_info_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { %struct.ecore_rdma_info*, i32 }
%struct.ecore_rdma_info = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [62 x i8] c"ecore rdma alloc failed: cannot allocate memory (rdma info).\0A\00", align 1
@ECORE_NOMEM = common dso_local global i32 0, align 4
@ECORE_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ecore_rdma_info_alloc(%struct.ecore_hwfn* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ecore_hwfn*, align 8
  %4 = alloca %struct.ecore_rdma_info*, align 8
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %3, align 8
  %5 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %6 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* @GFP_KERNEL, align 4
  %9 = call %struct.ecore_rdma_info* @OSAL_ZALLOC(i32 %7, i32 %8, i32 4)
  store %struct.ecore_rdma_info* %9, %struct.ecore_rdma_info** %4, align 8
  %10 = load %struct.ecore_rdma_info*, %struct.ecore_rdma_info** %4, align 8
  %11 = icmp ne %struct.ecore_rdma_info* %10, null
  br i1 %11, label %16, label %12

12:                                               ; preds = %1
  %13 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %14 = call i32 @DP_NOTICE(%struct.ecore_hwfn* %13, i32 0, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str, i64 0, i64 0))
  %15 = load i32, i32* @ECORE_NOMEM, align 4
  store i32 %15, i32* %2, align 4
  br label %24

16:                                               ; preds = %1
  %17 = load %struct.ecore_rdma_info*, %struct.ecore_rdma_info** %4, align 8
  %18 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %19 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %18, i32 0, i32 0
  store %struct.ecore_rdma_info* %17, %struct.ecore_rdma_info** %19, align 8
  %20 = load %struct.ecore_rdma_info*, %struct.ecore_rdma_info** %4, align 8
  %21 = getelementptr inbounds %struct.ecore_rdma_info, %struct.ecore_rdma_info* %20, i32 0, i32 0
  %22 = call i32 @OSAL_SPIN_LOCK_INIT(i32* %21)
  %23 = load i32, i32* @ECORE_SUCCESS, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %16, %12
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local %struct.ecore_rdma_info* @OSAL_ZALLOC(i32, i32, i32) #1

declare dso_local i32 @DP_NOTICE(%struct.ecore_hwfn*, i32, i8*) #1

declare dso_local i32 @OSAL_SPIN_LOCK_INIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
